WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226679
[GTK] Can't click links with touchscreen
https://bugs.webkit.org/show_bug.cgi?id=226679
Summary
[GTK] Can't click links with touchscreen
Alice Mikhaylenko
Reported
2021-06-05 05:01:01 PDT
Haven't bisected, but probably a fallout from
https://bugs.webkit.org/show_bug.cgi?id=212324
Attachments
Patch
(5.73 KB, patch)
2021-07-08 08:08 PDT
,
Alice Mikhaylenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Mikhaylenko
Comment 1
2021-07-08 01:48:49 PDT
Ok, so I have a more specific reproducer now: 1. Tap an empty space on the page 2. Tap a link - it doesn't work 3. Click an empty space with pointer 4. Tap a link - it works
Alice Mikhaylenko
Comment 2
2021-07-08 08:08:10 PDT
Created
attachment 433132
[details]
Patch Probably needs
https://bugs.webkit.org/show_bug.cgi?id=227701
first.
EWS
Comment 3
2021-07-15 06:48:34 PDT
Committed
r279944
(
239688@main
): <
https://commits.webkit.org/239688@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433132
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug